us-east1/kubernetes_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app

spec:
  selector: 
    matchLabels:
      app: flask-app
  replicas: 5
  template:
    metadata:
      labels:
        app: flask-app 
    spec:
      containers:
        - name: flask-app 
          image: pswalia06/liatrio_mission:v1
          ports:
            - containerPort: 5000
              protocol: TCP
