us-east1/kubernetes_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flash-app-service
spec:
  type: ClusterIP 
  ports:
    - port: 5000
  selector:
    app: flask-app
